<resources>
    <string name="app_name">robocoinx</string>
    <string name="header">Free Bitcoin</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_reset">Reset</string>
    <string name="label_forgot_pass">Forgot Password?</string>

    <string name="refresh_captcha">Refresh Captcha</string>

    <string name="finish">FINISH</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="running">RUNNING</string>
    <string name="running_dot">Running...</string>
    <string name="stop_count_hour">00:00</string>
    <string name="stop_count_day">00:00:00</string>

    <string name="already_account">Already account?</string>
    <string name="no_account">No account yet?</string>

    <string name="header_date">Date</string>
    <string name="header_amount">Amount</string>
    <string name="header_balance">Balance</string>
    <string name="account">Account Overview</string>
    <string name="current_balance">Current balance</string>
    <string name="rp_time">Reward Time</string>
    <string name="bonus_time">Bonus Time</string>
    <string name="next_bitcoin">Next Bitcoin:</string>
    <string name="transaction_name">Transaction name</string>
    <string name="sample_date">20 sept 17 10:11:11</string>
    <string name="sample_amount">0.00004567</string>
    <string name="transaction_history">Transaction History</string>
    <string name="last_transaction_history">Last Transaction History</string>
    <string name="btc_address">5D1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xxX</string>
    <string name="label_btc_address">Bitcoin Address</string>
    <string name="label_change_password">Change Password</string>

    <string name="label_to">To</string>
    <string name="label_amount">Amount</string>
    <string name="label_enter_amount">Enter Amount</string>

    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_repeat_password">Confirm New Password</string>

    <string name="label_password_e">Enter password</string>

    <string name="label_change">Change</string>

    <string name="label_withdraw">Withdraw</string>

    <string name="desc_advantage_automatic"><ul>
				<li>Automatic bitcoin claim</li>
				<li>Bitcoin price is always going up</li>
				<li>Your bitcoin assets will continue to grow</li>
				<li>Additional reward points</li>
				<li>Additional extra bonus</li>
				</ul>
    </string>
    <string name="label_fee">Transaction Fees: 0.00000000 BTC</string>
    <string name="label_amount_deducted">Amount Deducted: 0.00000000 BTC</string>

    <string name="note1">You can send bitcoins to your deposit address and
        they will be credited to your account after 1 network confirmation.
        We have no minimum deposit amount, we accept and credit all deposits to your account.</string>
    <string name="note2">Please double-check that the address you have copied is correct
        before sending bitcoins from your wallet since there are some malware that can
        change the deposit address after you copy it, resulting in coins being sent
        to some other address and not your deposit address.</string>
    <string-array name="type_withdraw">
        <item>Auto</item>
        <item>Slow</item>
        <item>Instant</item>
    </string-array>
</resources>
