<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.HomeActivity">

    <ImageView
        android:id="@+id/buttonPage"
        android:layout_width="23sp"
        android:layout_height="23sp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/avenir_roman"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/avenir_roman"
        app:layout_constraintEnd_toEndOf="@id/parent"
        app:layout_constraintBottom_toTopOf="@id/constraintBoxBalance"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintBoxBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/labelAccount">

        <ImageView
            android:id="@+id/iconBitcoin"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_bitcoin"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="balance"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/iconBitcoin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelCurrentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/current_balance"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBalance" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_green"
            android:text="@string/start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_red"
            android:textColor="@color/white"
            android:text="@string/stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewHaveCapcha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginStart="25dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/avenir_roman"
        android:layout_marginEnd="5dp"
        android:text="requirement auto"
        app:layout_constraintTop_toBottomOf="@+id/constraintBoxBalance"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="25dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewHaveCapcha"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginEnd="15dp"
            android:text="userID" />

        <TextView
            android:id="@+id/textViewRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginEnd="15dp"
            android:text="reward poin" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelNextBTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/next_bitcoin"
        android:fontFamily="@font/avenir_roman"
        app:layout_constraintTop_toBottomOf="@+id/layoutPoint"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewnextRoll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/stop_count_hour"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toStartOf="@id/layoutTimeBonus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelNextBTC" />

    <LinearLayout
        android:id="@+id/layoutTimeBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHaveCapcha">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/rp_time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewRPBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/bonus_time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewBTCBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/headerTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTimeBonus"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelTransactionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/transaction_history" />
        <ListView
            android:id="@+id/listTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:paddingBottom="10dp"
            android:background="@color/greyWhite"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonSlideTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/small_circle_transparent"
        android:src="@drawable/ic_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerTransaction" />
</androidx.constraintlayout.widget.ConstraintLayout>