<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/header"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/labelAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="12sp"
                android:fontFamily="@font/avenir_roman" />

            <Button
                android:id="@+id/buttonUp"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/label_sign_up"
                android:background="@drawable/button_up" />
        </LinearLayout>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:fontFamily="@font/gotham_bold"
            android:textAllCaps="true"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/textHint"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/label_email" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:fontFamily="@font/avenir_roman"
                android:background="@drawable/line_edit_text"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/labelPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="12sp"
                android:textColor="@color/textHint"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/label_password" />

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:fontFamily="@font/avenir_roman"
                android:background="@drawable/line_edit_text"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/labelCaptcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="Please Enter Captcha"
                android:fontFamily="@font/avenir_roman"
                android:textSize="12sp"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_fingerprint"/>
            <EditText
                android:id="@+id/editTextCaptcha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="12sp"
                android:fontFamily="@font/avenir_roman"
                android:background="@drawable/line_edit_text"
                android:inputType="text"
                android:textColorHint="@color/greyWhite"
                android:hint="Enter captcha here"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:fontFamily="@font/gotham_bold"
                android:textColor="@color/white"
                android:background="@drawable/button_radius" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/label_forgot_pass"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>