<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBarWD"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BlueAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brightBlue"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageBackCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:src="?attr/actionModeCloseDrawable"
                android:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/label_change_password"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/labelOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/label_old_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_grey"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/label_password_e"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAllCaps="false"
            android:textColor="@color/greyishBrown"
            android:textColorHint="@color/greyishBrown"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelOldPassword" />

        <ImageView
            android:id="@+id/imageVisibilityOldPass"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_visibility_off"
            android:tint="@color/blackGrey"
            app:layout_constraintEnd_toEndOf="@id/editTextOldPassword"
            app:layout_constraintTop_toTopOf="@id/editTextOldPassword" />

        <TextView
            android:id="@+id/labelNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/label_new_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextOldPassword" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_grey"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/label_password_e"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAllCaps="false"
            android:textColor="@color/greyishBrown"
            android:textColorHint="@color/greyishBrown"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelNewPassword" />

        <ImageView
            android:id="@+id/imageVisibilityNewPass"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_visibility_off"
            android:tint="@color/blackGrey"
            app:layout_constraintEnd_toEndOf="@id/editTextNewPassword"
            app:layout_constraintTop_toTopOf="@id/editTextNewPassword" />

        <TextView
            android:id="@+id/labelConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/label_repeat_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNewPassword" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_grey"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/label_password_e"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAllCaps="false"
            android:textColor="@color/greyishBrown"
            android:textColorHint="@color/greyishBrown"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelConfirmPassword" />

        <ImageView
            android:id="@+id/imageVisibilityConfirmPass"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_visibility_off"
            android:tint="@color/blackGrey"
            app:layout_constraintEnd_toEndOf="@id/editTextConfirmPassword"
            app:layout_constraintTop_toTopOf="@id/editTextConfirmPassword" />

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_blue"
            android:text="@string/label_change"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>